--- a/deploy/crds/aws_v1alpha1_accountclaim_crd.yaml
+++ b/deploy/crds/aws_v1alpha1_accountclaim_crd.yaml
@@ -98,11 +98,14 @@ spec:
               - name
               - id
               type: object
+            orgID:
+              type: string
           required:
           - legalEntity
           - awsCredentialSecret
           - aws
           - accountLink
+          - orgID
           type: object
         status:
           properties:
