--- a/deploy/crds/aws_v1alpha1_accountpool_cr.yaml
+++ b/deploy/crds/aws_v1alpha1_accountpool_cr.yaml
@@ -1,8 +1,10 @@
 apiVersion: aws.managed.openshift.io/v1alpha1
 kind: AccountPool
 metadata:
-  name: example-accountpool
+  name: example-accountpool-2
   namespace: aws-account-operator
 spec:
   # Add fields here
   poolSize: 1
+  orgID: "456"
+  credentialsSecret: aws-org-2
